WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262044
[WGSL] Extra trailing semicolons cause parsing failure
https://bugs.webkit.org/show_bug.cgi?id=262044
Summary
[WGSL] Extra trailing semicolons cause parsing failure
Tadeu Zagallo
Reported
2023-09-25 08:21:21 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-25 08:21:42 PDT
<
rdar://problem/115993754
>
Tadeu Zagallo
Comment 2
2023-09-25 08:25:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18162
EWS
Comment 3
2023-09-26 00:30:57 PDT
Committed
268437@main
(03ad7af7faf1): <
https://commits.webkit.org/268437@main
> Reviewed commits have been landed. Closing PR #18162 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug